[add, modify] PClayout.js -> ProgramList 추가 / 전체적인 마크업 및 css 수정

--- a/src/components/program/infoinput.css
+++ b/src/components/program/infoinput.css
@@ -85,7 +85,7 @@ th, td{
     text-align: center;
 }
 
-.confirmBtn a {
+.confirmBtn button {
     border-radius: 50px;
     padding: 10px 30px;
     background-color: #5EBF92;
