--- a/src/components/program/curriculum.css
+++ b/src/components/program/curriculum.css
@@ -24,6 +24,7 @@ button {
 
 .topDetailpage .detailpageImg img {
     border-radius: 10px;
+    width: 500px;
 }
 .topDetailpage .detailpageTxt {
     padding-left: 50px;
@@ -48,7 +49,7 @@ button {
     margin-right: 30px;
 }
 
-.topDetailpage .detailpageTxt .btnUl ul li{
+.topDetailpage .detailpageTxt .btnUl ul li {
     display: inline-block;
     padding: 5px 20px;
     margin-right: 20px;
@@ -66,16 +67,43 @@ button {
 }
 
 .topDetailpage .right .shareBtn {
-    padding-left: 10px;
+    padding-left: 5px;
     padding-right: 20px;
     display: block;
     font-size: 20px;
-    background: url(/public/images/share.png) no-repeat 50px center;
+    background: url(/public/images/share.png) no-repeat 40px center;
     background-size: 20px;
+}
+
+.bottomSelectFix {
+    padding: 20px 0;
+    display: none;
+    position: absolute;
+    right: 15%;
+}
+
+.bottomSelectFix.fix {
+    display: block;
+    position: fixed;
+    top: 71px;
+    z-index: 1001;
+    padding-top: 20px;
+}
+
+.bottomSelectFix button {
+    padding: 2px 30px;
+    margin-left: 20px;
+    margin-right: 30px;
+    border: 1px solid #636363;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    background-color: #fff;
 }
 
 .bottomDetailpage .category {
     width: 100%;
+    padding-bottom: 20px;
 }
 
 .bottomDetailpage .category li {
@@ -100,7 +128,7 @@ button {
 
 .bottomDetailpage .category.fix {
     position: fixed;
-    top: 0;
+    top: 72px;
     z-index: 1000;
     padding-top: 20px;
     background-color:rgba(255, 255, 255, 0.9);
