--- a/src/components/program/termsofuse.css
+++ b/src/components/program/termsofuse.css
@@ -66,7 +66,7 @@ input {
     margin-bottom: 50px;
 }
 
-.ok_btn a {
+.ok_btn button {
     border-radius: 50px;
     padding: 10px 30px;
     background-color: #5EBF92;
