--- a/src/components/academy/Introduce/Introduce.css
+++ b/src/components/academy/Introduce/Introduce.css
@@ -22,3 +22,41 @@
   height: 100%;
   justify-content: center;
 }
+.sticky-box {
+  position: relative;
+}
+.Bottom-bannerImg1 {
+  margin-top: 100px;
+  background-color: #48845b;
+  width: 100%;
+  height: 700px;
+  display: flex;
+  align-items: center;
+}
+.Bottom-bannerImg2 {
+  margin: 100px 0;
+  background-color: lightgray;
+  width: 100%;
+  height: 600px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.Bottom-bannerImg2 p {
+  font-size: 16px;
+  font-weight: 700;
+  color: #fff;
+  margin-top: 20px;
+}
+.Bottom-bannerImg2 div {
+  margin: 10px 100px;
+}
+
+.IntroduceTxt {
+  font-size: 40px;
+  font-weight: 600;
+  color: #fff;
+  margin-left: 40px;
+  line-height: 70px;
+}
