--- a/src/components/program/completed.css
+++ b/src/components/program/completed.css
@@ -1,7 +1,3 @@
-* {
-    color: #636363;
-}
-
 table{
     padding:0;
     border:0;
@@ -10,34 +6,6 @@ table{
 }
 th, td{
     padding:0;
-}
-
-.content {
-    padding: 100px 0;
-}
-
-.step ul {
-    text-align: center;
-}
-
-.step ul li {
-    border-radius: 50px;
-    background-color: #F4F4F4;
-    display: inline-block;
-    padding: 10px 30px;
-    font-size: 20px;
-}
-
-/* 나중에 .on class를 js로 추가하기 */
-.step ul li:nth-of-type(3) { 
-    color: #fff;
-    background-color: #5EBF92;
-    font-weight: bold;
-    box-sizing: border-box;
-}
-
-.step ul i {
-    padding: 0 15px;
 }
 
 .compTable {
@@ -59,21 +27,11 @@ th, td{
     font-weight: bold;
 }
 
-.btn {
+.confirmBtn {
     text-align: center;
+    margin-bottom: 80px;
 }
 
-.btn ul {
-    margin-bottom: 50px;
-}
-
-.btn ul li {
-    border-radius: 50px;
-    padding: 10px 30px;
-    margin: 0 10px;
-    background-color: #5EBF92;
-    color: #fff;
-    font-weight: bold;
-    display: inline-block;
-    font-size: 14px;
+.confirmBtn .btnMargin {
+    margin-right: 10px;
 }
