--- a/src/components/program/infoinput.css
+++ b/src/components/program/infoinput.css
@@ -1,7 +1,3 @@
-* {
-    color: #636363;
-}
-
 table{
     padding:0;
     border:0;
@@ -12,35 +8,6 @@ th, td{
     padding:0;
 }
 
-.content {
-    padding: 100px 0;
-}
-
-.step ul {
-    text-align: center;
-}
-
-.step ul li {
-    border-radius: 50px;
-    background-color: #F4F4F4;
-    display: inline-block;
-    padding: 10px 30px;
-    font-size: 20px;
-}
-
-/* 나중에 .on class를 js로 추가하기 */
-.step ul li:nth-of-type(2) { 
-    color: #fff;
-    background-color: #5EBF92;
-    font-weight: bold;
-    box-sizing: border-box;
-}
-
-.step ul i {
-    padding: 0 15px;
-}
-
-
 
 .tableSection .title {
     font-size: 24px;
@@ -48,8 +15,16 @@ th, td{
 
 .infoTable {
     margin: 100px auto;
-    width: 90%;
+    width: 100%;
     border: 1px solid #f3f3f3;
+}
+
+.tableSectionPart:nth-child(2) .infoTable {
+    margin-top: 10px;
+}
+
+.tablePrice {
+    margin-bottom: 10px;
 }
 
 .infoTable tr:nth-child(odd) {
@@ -65,32 +40,23 @@ th, td{
     font-weight: bold;
 }
 
-.tableSection .btn {
+.inputBtnList {
     text-align: right;
 }
 
-.tableSection .btn a {
-    background-color: #ddd;
-    border-radius: 20px;
-    padding: 10px 20px;
-    display: inline-block;
-    font-size: 12px;
+.inputBtn {
+    margin-right: 10px;
 }
 
-.tableSection .btn a:first-child {
-    margin-right: 10px;
+.checkSection {
+    display: flex;
+}
+
+.paymentNoti {
+    text-align: center;
+    color: #999;
 }
 
 .confirmBtn {
     text-align: center;
-}
-
-.confirmBtn button {
-    border-radius: 50px;
-    padding: 10px 30px;
-    background-color: #5EBF92;
-    color: #fff;
-    font-weight: bold;
-    display: inline-block;
-    font-size: 20px;
 }
