--- a/src/components/program/program.css
+++ b/src/components/program/program.css
@@ -10,19 +10,6 @@ th, td{
 }
 
 
-.mainTitle {
-    font-size: 28px;
-    margin-bottom: 10px;
-    font-weight: bold;
-}
-
-.subTitle {
-    font-size: 18px;
-    margin-bottom: 20px;
-}
-
-
-
 .tableSection {
     margin: 100px auto 150px;
 }
@@ -73,7 +60,7 @@ th, td{
     padding-top: 5px;
 }
 
-.tableSection .top .searchBox {
+/* .tableSection .top .searchBox {
     width: 250px;
     height: 40px;
     margin: 20px 0;
@@ -87,6 +74,11 @@ th, td{
     background-position: 16px center;
     background-size: 16px 16px;
     background-color: #f3f3f3;
+} */
+
+.programSearch {
+    float: right;
+    margin: 20px 0;
 }
 
 .programTable {
