--- a/src/components/program/termsofuse.css
+++ b/src/components/program/termsofuse.css
@@ -1,35 +1,3 @@
-* {
-    color: #636363;
-}
-
-.content {
-    padding: 100px 0;
-}
-
-.step ul {
-    text-align: center;
-}
-
-.step ul li {
-    border-radius: 50px;
-    background-color: #F4F4F4;
-    display: inline-block;
-    padding: 10px 30px;
-    font-size: 20px;
-}
-
-/* 나중에 .on class를 js로 추가하기 */
-.step ul li:first-child { 
-    color: #fff;
-    background-color: #5EBF92;
-    font-weight: bold;
-    box-sizing: border-box;
-}
-
-.step ul i {
-    padding: 0 15px;
-}
-
 .terms_policy_box {
     margin: 80px 0;
 }
@@ -40,19 +8,18 @@
     margin-bottom: 15px;
 }
 
-.text_box {
+.terms_policy .text_box {
     border: 1px solid #c4c4c4;
     border-radius: 20px;
-    padding: 20px;
+    padding: 30px;
     margin-bottom: 20px;
+    overflow: auto;
+    word-break: keep-all;
+    max-height: 12em;
 }
 
-input {
-    margin-right: 5px;
-}
-
-.span_bold {
-    font-weight: bold;
+.textRed {
+    color: #e34f4f;
 }
 
 .agree_box {
@@ -64,14 +31,4 @@ input {
     text-align: center;
     margin: auto;
     margin-bottom: 50px;
-}
-
-.ok_btn button {
-    border-radius: 50px;
-    padding: 10px 30px;
-    background-color: #5EBF92;
-    color: #fff;
-    font-weight: bold;
-    display: inline-block;
-    font-size: 20px;
 }
