[add] 아카데미 > 제휴제안,인재채용 추가 [modify] 메인,회원가입 수정

--- a/src/components/academy/Recruit.css
+++ b/src/components/academy/Recruit.css
@@ -1,40 +1,190 @@
-.recruit-wrap {
-  width: 1000px;
+.recruit-wrap{
+ 
 }
-.recruit-FormGroup {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.recruit-header {
-  width: 200px;
-  height: 30px;
-  font-size: 35px;
-  color: #aaaaaa;
+.recruit-wrap .cont-form-box{
+  margin-top: 15px;
+  width:800px;
+  margin: auto;
   margin-bottom: 50px;
-  margin-top: 50px;
 }
-.recruit-span {
-  width: 1000px;
-  height: 30px;
-  font-size: 20px;
-  color: #aaaaaa;
+.recruit-wrap .form-list{
+  border-top: 2px solid #ddd;
+  padding: 0;
+  margin: 0;
 }
-.recruit-subTitle {
-  font-size: 14px;
-  font-weight: 700px;
+.recruit-wrap .form-list > li {
+  display: table;
+  width: 100%;
+  height: 70px;
+  border-bottom: 1px solid #ddd;
+  table-layout: fixed;
+  padding-left: 30px;
 }
-.recruit-TextBox {
-  margin-top: 30px;
+.recruit-wrap .form-title {
+  width: 190px;
 }
-.recruit-submitBtn {
-  width: 70px;
-  height: 30px;
-  background-color: #aaaaaa;
+.recruit-wrap .form-title, .recruit-wrap .form-cont {
+  display: table-cell;
+  padding: 15px 30px 15px 0;
+  font-size: 15px;
+  line-height: 22px;
+  vertical-align: middle;
+  color: #000;
+}
+.recruit-wrap .form-title span.ess {
+  position: relative;
+}
+.recruit-wrap .form-title span.ess:after {
+  position: absolute;
+  top: 2px;
+  right: -10px;
+  content: '*';
+  clear: both;
+  color: #ed3b46;
+  height: 10px;
+}
+.recruit-wrap .form-cont .count-input {
+  position: relative;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background: #fff;
+}
+.recruit-wrap .form-cont input{
   border: none;
 }
-.recruit-lectureImg {
-  width: 300px;
-  height: 300px;
+.recruit-wrap .form-cont .count-input.inp .ipt-txt {
+  padding-right: 40px;
+}
+.recruit-wrap .form-cont .ipt-txt {
+  width: 100%;
+  padding: 10px 15px 10px;
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 18px;
+}
+.recruit-wrap .form-cont .count-input.ta {
+  height: 145px;
+}
+.recruit-wrap .form-cont .count-input textarea {
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 18px;
+  resize: none;
+  width: 100%;
+  height: 100%;
+  border: none;
+  padding: 10px 15px 10px;
+}
+.recruit-wrap .form-cont .file-upload {
+    position: relative;
+    margin-top: 10px;
+    display: flex;
+}
+.recruit-wrap .form-cont .file-upload .ipt-upload {
+  width: 500px;
+  border: 1px solid #ddd;
+  padding: 10px 0 10px 15px;
+  border-radius: 5px;
+  padding-left: 15px;
+  font-size: 14px;
+  line-height: 18px;
+}
+.recruit-wrap .form-cont .file-upload .ipt-file {
+  position: absolute;
+  right: 0;
+  width: 107px;
+  padding: 0;
+  height: 38px;
+  overflow: hidden;
+  opacity: 0;
+  cursor: pointer;
+  z-index: -1;
+}
+.recruit-wrap .form-cont .file-upload .btn-file {
+  display: inline-block;
+  width: 107px;
+  margin-left: 8px;
+  border: 1px solid #000;
+  color: #000;
+  text-align: center;
+  font-size: 14px;
+  line-height: 38px;
+  height: 38px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.recruit-wrap .form-description.type2 {
+  margin-top: 20px;
+  padding-left: 25px;
+  background-color: transparent;
+  background-position: left 0;
+  border-radius: 0;
+  line-height: 20px;
+}
+.recruit-wrap .form-description {
+  display: inline-block;
+  padding-left: 40px;
+  padding-right: 12px;
+  margin-top: 22px;
+  background: url(/public/images/academy/ico_point_mark.png) #fff1d9 no-repeat 10px 9px;
+  border-radius: 20px;
+  font-size: 13px;
+  line-height: 36px;
+  color: #444;
+}
+.recruit-wrap .c-btn-box{
+  text-align: center;
+}
+
+
+.recruit-wrap .form-cont .file-upload .file-delete.on {
+  display: block;
+}
+.recruit-wrap .form-cont .file-upload .file-delete {
+  display: none;
+  position: absolute;
+  top: 50%;
+  right: 115px;
+  background: url(/public/images/ico_close.png) no-repeat center center;
+  width: 15px;
+  height: 15px;
+  white-space: nowrap;
+  text-indent: 101%;
+  overflow: hidden;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+}
+
+
+
+
+/* 반응형 웹 - PC  */
+@media screen and (min-width:768px) {
+  .recruit-wrap .recruit-lectureImg{
+    width: 400px;
+    height: 400px;
+  }
+  .recruit-wrap .recruit-Img{
+    width: 300px;
+    height: 250px;
+  }
+  .recruit-wrap .recruit-box{
+    display: flex;
+  }
+}
+/* 반응형 웹 - Mobile  */
+@media screen and (max-width:767px){
+  .recruit-wrap .cont-form-box{
+    width: 600px;
+  }
+  .recruit-wrap .recruit-lectureImg{
+    width: 0;
+    height: 0;
+  }
+  .recruit-wrap .recruit-Img{
+    width: 0;
+    height: 0;
+  }
+	
 }
