--- a/src/components/common/footer.css
+++ b/src/components/common/footer.css
@@ -80,32 +80,26 @@
     transition: opacity .5s linear;
   }
   .btn-screen-top {
-    display: block;
-    opacity: 0;
     position: fixed;
-    bottom: 40px;
-    right: 40px;
+    bottom: 138px;
+    right: 0;
     z-index: 30;
-    width: 60px;
-    height: 60px;
   }
   .btn-screen-top span {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 60px;
+    width: 70px;
+    height: 70px;
     padding-top: 31px;
     border: 1px solid #ccc;
     border-width: 1px 0 1px 1px;
-    background-color: #008000;
+    background-color: #fff;
     font-size: 13px;
-    font-weight: bold;
-    color: rgb(65, 62, 62);
+    color: #000;
     line-height: 22px;
     letter-spacing: 0;
     text-align: center;
-    border-radius: 100%;
-  }
+}
   .btn-screen-top span:before {
     content: '';
     position: absolute;
@@ -147,12 +141,5 @@
     margin: 6px 0;
     display: flex;
     justify-content: center;
-  }
-  .footer-btm-area .btm-text-top {
-    margin-top: 12px;
-    font-size: 10px;
-    color: #666;
-    line-height: 18px;
-    letter-spacing: 0;
   }
 }
